--- a/notebooks/preprocess_seg_dataset.ipynb
+++ b/notebooks/preprocess_seg_dataset.ipynb
@@ -18,6 +18,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "Code reference: https://www.appsloveworld.com/python/1383/how-to-extract-foreground-objects-from-coco-dataset-or-open-images-v6-dataset?expand_article=1"
+      ],
+      "metadata": {
+        "id": "WuTpCy9iaLia"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
