Modified preprocess dataset

--- a/notebooks/preprocess_seg_dataset.ipynb
+++ b/notebooks/preprocess_seg_dataset.ipynb
@@ -20,7 +20,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Code reference: https://www.appsloveworld.com/python/1383/how-to-extract-foreground-objects-from-coco-dataset-or-open-images-v6-dataset?expand_article=1"
+        "**Code reference:** https://www.appsloveworld.com/python/1383/how-to-extract-foreground-objects-from-coco-dataset-or-open-images-v6-dataset?expand_article=1"
       ],
       "metadata": {
         "id": "WuTpCy9iaLia"
