Tested ResNet-18 on COCO composite in notebook

--- a/notebooks/preprocess_seg_dataset.ipynb
+++ b/notebooks/preprocess_seg_dataset.ipynb
@@ -637,7 +637,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Turn preprocess images into a custom dataset**"
+        "## **Turn preprocessed images into a custom dataset**"
       ],
       "metadata": {
         "id": "GK3hyt5AsfrE"
