Ran ResNet-18 on COCO foreground images

--- a/notebooks/resnet18_coco_composite.ipynb
+++ b/notebooks/resnet18_coco_composite.ipynb
@@ -1521,7 +1521,7 @@
       "cell_type": "code",
       "source": [
         "model = ResNet(img_channels=3, num_layers=18, block=BasicBlock, num_classes=2).to(device)\n",
-        "plot_name = 'ResNet-18'"
+        "plot_name = 'ResNet-18 on COCO Composite (Baseline)'"
       ],
       "metadata": {
         "id": "SkZXo4E9Q3SR"
